.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classification-explorer
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - deploy_url
  rules:
    - host: deploy_url
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: classification-explorer
                port: 
                  number: 80
